# mtcp-w24-solution

./: .gitignore  CMakeLists.txt  README.md  controller.cpp  instructions.md  main.cpp  mros_json.cpp  mros_json.hpp  pose.json  sensorReadings.txt  system.cpp
data/: control_inputs.txt
include/: mros_json.hpp  systemUtils.hpp  system_utils.hpp
include/messageTypes/: twist.hpp
include/messages/: pose.hpp  twist.hpp
include/socket/: client_socket.hpp  server_socket.hpp  socket.hpp
include/socket/message_socket/: client_message_socket.hpp  connection_message_socket.hpp  message_socket.hpp
include/socket/utils/: peer_closed_exception.hpp  socket_errno_exception.hpp  socket_exception.hpp
messages/: pose1.json  pose3.json
simulator/: CMakeLists.txt  README.md  bridge.py  client.js  index.html  main.js  test_python_cpp_socket.cpp
simulator/bridge/cpp_python_socket/: server.py  test_python_cpp_socket.cpp
simulator/bridge/cpp_python_socket/socket/: server_socket.hpp  socket.hpp
simulator/bridge/cpp_python_socket/socket/message_socket/: client_message_socket.hpp
simulator/bridge/cpp_python_socket/socket/utils/: socket_errno_exception.hpp  socket_exception.hpp
simulator/bridge/python_js_socket/: client.js  index.html  server.py
simulator/bridge/python_socket/: client.py  server.py
simulator/socket/: client_socket.hpp  connection_socket.hpp
simulator/socket/message_socket/: message_socket.hpp
simulator/socket/utils/: peer_closed_exception.hpp
squirrel_sim-devel/: bridgeServer.js  index.html  main.js  package-lock.json  package.json  run.py
squirrel_sim-devel/bridge/: README.md
src/: controller.cpp  mros_json.cpp  system.cpp
src/lcm-send/: lcm_bridge.cpp  twist_send.cpp
src/socket/: server_socket.cpp
test/: json_reader.cpp  struct_json.cpp  test_message_socket.cpp  test_mros_json.cpp  test_pose.cpp  test_twist.cpp
test_manual/: test_bridge_and_simulator.cpp  test_client.cpp  test_json_parsing.cpp  test_monitor_connection.cpp  test_server.cpp
toStringTests/: pose2.json  twist1.json
